# TodoAPP

./: .gitignore  CLAUDE.md  architecture-analysis.html  index.html  package-lock.json  package.json  setup-powershell.ps1  todoapp-plan-v2.md  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  ui-mockup.html  vite.config.ts
public/: manifest.webmanifest  sw.js
public/sounds/: LICENSES.md
scripts/: fetch-sounds.mjs
src/: App.tsx  main.tsx  tsconfig.json  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_core.rs  audio_library.rs  database.rs  lib.rs  main.rs  reminder.rs
src/components/: AddTodoBar.tsx  BrandMark.tsx  BreakdownPopover.tsx  DailyAchievementModal.tsx  DatePicker.tsx  EmptyState.tsx  FilterTabs.tsx  Header.tsx  SettingsDrawer.tsx  StartupPromptModal.tsx  TagChip.tsx  Toast.tsx  TodoCard.tsx  TodoCombobox.tsx  TodoSection.tsx  ToolsPanel.tsx
src/i18n/: en.json  index.ts  zh.json
src/legal/: privacy_en.md  privacy_zh.md  tos_en.md  tos_zh.md
src/lib/: cloudBackup.ts  csv-export.ts  export-chat.ts  import-utils.ts  musicLibrary.ts  nlpDate.ts  pdf-export.tsx  petPhrases.ts  priority.ts  responsive.ts  soundscape.ts  tauri.ts  utils.ts  weeklyReport.ts
src/store/: aiStore.ts  chatStore.ts  completionStore.ts  focusStore.ts  habitStore.ts  musicLibraryStore.ts  notesStore.ts  overlayStore.ts  permissionStore.ts  quadrantStore.ts  recurrenceStore.ts  settingsStore.ts  soundscapeStore.ts  subtaskStore.ts  tagStore.ts  timerStore.ts  todoStore.ts  (+2 more)
(+28 files in other folders)
