[package]
name = "todoapp"
version = "0.1.0"
description = "A minimalist todo desktop app"
authors = ["todoapp"]
license = "MIT"
repository = ""
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2.5", features = [] }
tauri-plugin-autostart = "2.3"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-sql = { version = "2.3", features = ["sqlite"] }
tauri-plugin-store = "2.2"
tauri-plugin-window-state = "2.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
